# awesome-rust-web

./: .gitignore  Cargo.toml  clippy.toml  docker-compose.yaml  makefile  readme.md
backend/: .env  .env.local  Cargo.toml  Dockerfile
backend/src/: app_state.rs  database.rs  env.rs  errors.rs  lib.rs  logs.rs  main.rs
backend/src/auth/: handler.rs  mod.rs  model.rs  repository.rs  route.rs  service.rs
backend/src/cron/: component.rs  creator.rs  handler.rs  mod.rs
backend/src/health/: handler.rs  mod.rs  model.rs  repository.rs  route.rs  service.rs
backend/src/kafka/: adaptor.rs  component.rs  mod.rs
backend/src/middlewares/: middleware.rs
backend/src/migrations/: 001_create_table_test.sql
backend/src/migrations/init/: down.sql  up.sql
backend/tests/: health.rs
frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html
frontend/src/: main.rs
