[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shaku = "0.6.1"
tokio = { version = "1", features = ["full"] }
axum = "0.6.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
uuid = {version = "1", features = ["v4","fast-rng",]}
strum_macros = "0.25"