[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shaku = "0.6.1"
shaku_axum = "0.4.0"
tokio = { version = "1", features = ["full"] }
axum = "0.6.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
uuid = {version = "1", features = ["v4","fast-rng",]}
strum_macros = "0.25"
sqlx = {version = "0.7.2", features = ["runtime-async-std-native-tls", "postgres"]}
futures = { version = "0.3.29" , features = ["executor"] }
tokio-cron-scheduler = "0.9.0"
http = { version = "0.2.11", features = [] }
hyper = "0.14.27"
tower = "0.4.13"
dotenvy = "0.15.7"

[dev-dependencies]
mockall = "0.11.4"
mockall_double = "0.3.0"
anyhow = "1"
httpc-test = "0.1.1"
rstest = "0.18.2"