[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shaku = "0.6.1"
shaku_axum = "0.5.0"
tokio = { version = "1", features = ["full"] }
axum = "0.7.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
uuid = {version = "1", features = ["v4","fast-rng",]}
strum_macros = "0.26.2"
sqlx = {version = "0.7.2", features = ["runtime-async-std-native-tls", "postgres", "migrate"]}
futures = { version = "0.3.29" , features = ["executor"] }
tokio-cron-scheduler = "0.10.2"
http = { version = "1.1.0", features = [] }
hyper = "1.3.1"
tower = "0.4.13"
dotenvy = "0.15.7"

[dev-dependencies]
mockall = "0.12.1"
mockall_double = "0.3.0"
anyhow = "1"
httpc-test = "0.1.1"
rstest = "0.19.0"