[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2.88"

[dependencies.web-sys]
version = "0.3.57"
features = [
	"Navigator",
]